test/semantics/invalid/p4/InvalidInnerClassInstantiation.java
package invalid.p4;

public class InvalidInnerClassInstantiation {
   class Inner {}
}

class C { Object o = new InvalidInnerClassInstantiation.Inner(); }
